<resources>
    <string name="app_name">Converter Lab</string>
    <string name="search_title">Поиск</string>
    <string name="link_title">Открыть сайт</string>
    <string name="map_title">Показать на карте</string>
    <string name="phone_title">Позвонить</string>
    <string name="details_title">Подробнее</string>
    <string name="address_title">Адрес:</string>
    <string name="phone_help_text_title">Тел.:</string>
    <string name="update_title">Updating…</string>
    <string name="share_title">Поделиться</string>
    <string name="details_phone_help_text_title">Телефон:</string>
    <string name="details_currency_name_help_text">Название валюты</string>
    <string name="details_currency_ask_bid_help_text">Покупка /\n Продажа</string>
    <string name="fab_menu_map_title">Карта</string>
    <string name="fab_menu_link_title">Сайт</string>
    <string name="share_dialog_button_title">Share</string>
    <string name="location_not_found">Can\'t find organization location</string>
    <string name="no_internet">No internet connection</string>
    <string name="database_update_notification">Database updated successfully.</string>
</resources>
