<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/toolbar_link"
        android:title="@string/link_title"
        android:icon="@drawable/ic_link"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/toolbar_map"
        android:title="@string/map_title"
        android:icon="@drawable/ic_map"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/toolbar_phone"
        android:title="@string/phone_title"
        android:icon="@drawable/ic_phone"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/toolbar_details"
        android:title="@string/details_title"
        android:icon="@drawable/ic_next"
        app:showAsAction="ifRoom"/>

</menu>