<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorToolBarItem">

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/card_toolbar_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorToolBarItem"
        android:contentDescription="@string/link_title"
        android:scaleType="fitCenter"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:src="@drawable/ic_link"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/card_toolbar_map"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/card_toolbar_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorToolBarItem"
        android:contentDescription="@string/map_title"
        android:scaleType="fitCenter"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:src="@drawable/ic_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/card_toolbar_phone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/card_toolbar_link"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/card_toolbar_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorToolBarItem"
        android:contentDescription="@string/phone_title"
        android:scaleType="fitCenter"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:src="@drawable/ic_phone"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/card_toolbar_details"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/card_toolbar_map"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/card_toolbar_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorToolBarItem"
        android:contentDescription="@string/details_title"
        android:scaleType="fitCenter"
        android:scaleX="0.3"
        android:scaleY="0.3"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintEnd_toEndOf="@+id/line"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/card_toolbar_details" />

</android.support.constraint.ConstraintLayout>